tests/typecheck/should_fail/T11541.stderr

T11541.hs:8:12: error: [GHC-88464] Variable not in scope: foo
